--- a/page14.html
+++ b/page14.html
@@ -34,23 +34,24 @@
     width: 150px;
     transition: all 1.5s ease-in-out;
     filter: drop-shadow(0 0 15px white);
+    z-index: 2;
   }
   #her {
     left: 10%;
-    z-index: 5; /* girl in front */
   }
   #you {
     right: 10%;
-    z-index: 4; /* boy behind */
   }
-  /* tilt + overlap when kissing */
+  /* Kissing state */
   .kissingHer {
-    transform: translateX(-70%) rotate(-8deg) scale(1.05);
+    left: 50%;
+    transform: translateX(-40%) rotate(-6deg) scale(1.05);
     filter: drop-shadow(0 0 25px pink);
   }
   .kissingYou {
-    transform: translateX(60%) rotate(8deg) scale(1.05);
-    filter: drop-shadow(0 0 20px pink);
+    right: 50%;
+    transform: translateX(40%) rotate(6deg) scale(1.05);
+    filter: drop-shadow(0 0 25px pink);
   }
   #kissBtn {
     padding: 12px 25px;
@@ -78,15 +79,16 @@
     font-size: 26px;
     animation: floatUp 2s linear forwards;
     pointer-events: none;
-    z-index: 10;
+    z-index: 3;
   }
   @keyframes floatUp {
     0% { opacity: 1; transform: translateY(0) scale(1);}
     100% { opacity: 0; transform: translateY(-150px) scale(1.5);}
   }
+  /* Quiz styles */
   .quiz-box {
     margin-top: 30px;
-    display: none;
+    display: none; /* Hidden until 10 kisses */
     z-index: 2;
     position: relative;
   }
@@ -113,6 +115,7 @@
   .quiz-box button:hover {
     background: green;
   }
+  /* Fireworks canvas behind */
   #fireworks {
     position: fixed;
     top: 0;
@@ -139,12 +142,14 @@
 
 <audio id="bgMusic" src="Page14.mp3" autoplay loop></audio>
 
+<!-- Quiz Box -->
 <div class="quiz-box" id="quizBox">
   <p><b>Un Amma Enna sollanumo solliko🤗</b></p>
   <input type="text" id="quizAnswer" placeholder="Type here...">
   <button onclick="checkQuiz()">Submit</button>
 </div>
 
+<!-- Fireworks -->
 <canvas id="fireworks"></canvas>
 
 <script>
@@ -159,25 +164,22 @@ kissBtn.addEventListener("click", () => {
   kisses++;
   counter.innerText = `Kisses Given: ${kisses} 💋`;
 
-  // Move both to center
-  her.style.left = "50%";
-  you.style.right = "50%";
+  // Move them close
+  her.classList.add("kissingHer");
+  you.classList.add("kissingYou");
 
   setTimeout(() => {
-    her.classList.add("kissingHer");
-    you.classList.add("kissingYou");
-
     for (let i = 0; i < 8; i++) {
       createEmoji(["❤️","💙","💜","💖","😘"][Math.floor(Math.random()*5)]);
     }
   }, 1500);
 
-  // Separate
+  // Separate after 3s
   setTimeout(() => {
-    her.style.left = "10%";
     her.classList.remove("kissingHer");
-    you.style.right = "10%";
     you.classList.remove("kissingYou");
+    her.style.left = "10%";
+    you.style.right = "10%";
 
     if (kisses >= 10) {
       quizBox.style.display = "block";
@@ -196,6 +198,7 @@ function createEmoji(symbol) {
   setTimeout(() => emoji.remove(), 2000);
 }
 
+// Quiz check
 function checkQuiz() {
   let ans = document.getElementById("quizAnswer").value.trim();
   if (ans.length > 0) {
