--- a/page14.html
+++ b/page14.html
@@ -17,16 +17,12 @@
     margin-top: 15px;
     font-size: 22px;
     text-shadow: 0 0 10px hotpink, 0 0 20px red, 0 0 30px purple;
-    position: relative;
-    z-index: 2;
   }
   #kissArea {
     position: relative;
     width: 100%;
     height: 400px;
     margin-top: 20px;
-    overflow: hidden;
-    z-index: 2;
   }
   .person {
     position: absolute;
@@ -35,25 +31,21 @@
     transition: all 1.5s ease-in-out;
     filter: drop-shadow(0 0 15px white);
   }
-  #her {
-    left: 10%;
-    z-index: 5; /* always on top */
-  }
-  #you {
-    right: 10%;
-    z-index: 4; /* stays behind */
-  }
-  /* Kissing state (both move inward) */
+  #her { left: 10%; z-index: 5; }
+  #you { right: 10%; z-index: 4; }
+
+  /* Kissing state → both move to center */
   .kissingHer {
     left: 50%;
-    transform: translateX(-60%) rotate(-6deg) scale(1.05);
+    transform: translateX(-100%) rotate(-6deg) scale(1.05);
     filter: drop-shadow(0 0 25px pink);
   }
   .kissingYou {
     right: 50%;
-    transform: translateX(-40%) rotate(6deg) scale(1.05);
+    transform: translateX(0%) rotate(6deg) scale(1.05);
     filter: drop-shadow(0 0 25px pink);
   }
+
   #kissBtn {
     padding: 12px 25px;
     background: hotpink;
@@ -63,8 +55,6 @@
     font-size: 18px;
     cursor: pointer;
     margin-top: 20px;
-    z-index: 2;
-    position: relative;
     box-shadow: 0 0 15px hotpink, 0 0 30px red;
   }
   #counter {
@@ -72,8 +62,6 @@
     font-size: 18px;
     color: cyan;
     text-shadow: 0 0 10px cyan, 0 0 20px blue;
-    z-index: 2;
-    position: relative;
   }
   .emoji {
     position: absolute;
@@ -86,12 +74,9 @@
     0% { opacity: 1; transform: translateY(0) scale(1);}
     100% { opacity: 0; transform: translateY(-150px) scale(1.5);}
   }
-  /* Quiz styles */
   .quiz-box {
     margin-top: 30px;
-    display: none; /* Hidden until 10 kisses */
-    z-index: 2;
-    position: relative;
+    display: none;
   }
   .quiz-box input {
     font-size: 18px;
@@ -111,12 +96,7 @@
     color: white;
     font-weight: bold;
     cursor: pointer;
-    box-shadow: 0 0 10px lime, 0 0 20px green;
   }
-  .quiz-box button:hover {
-    background: green;
-  }
-  /* Fireworks canvas behind */
   #fireworks {
     position: fixed;
     top: 0;
@@ -129,7 +109,7 @@
 <body>
 
 <h1>Love Kiss Game 💋🔥</h1>
-<p style="color:yellow; text-shadow:0 0 10px yellow; z-index:2; position:relative;">
+<p style="color:yellow; text-shadow:0 0 10px yellow;">
   Panda 🐼, 10 kisses kuduthaa quiz open aagum 😘💙
 </p>
 
@@ -143,14 +123,12 @@
 
 <audio id="bgMusic" src="Page14.mp3" autoplay loop></audio>
 
-<!-- Quiz Box -->
 <div class="quiz-box" id="quizBox">
   <p><b>Un Amma Enna sollanumo solliko🤗</b></p>
   <input type="text" id="quizAnswer" placeholder="Type here...">
   <button onclick="checkQuiz()">Submit</button>
 </div>
 
-<!-- Fireworks -->
 <canvas id="fireworks"></canvas>
 
 <script>
@@ -165,7 +143,7 @@ kissBtn.addEventListener("click", () => {
   kisses++;
   counter.innerText = `Kisses Given: ${kisses} 💋`;
 
-  // Move them close (inward)
+  // Move inward to center
   her.classList.add("kissingHer");
   you.classList.add("kissingYou");
 
@@ -175,7 +153,7 @@ kissBtn.addEventListener("click", () => {
     }
   }, 1500);
 
-  // Separate after 3s
+  // Reset back
   setTimeout(() => {
     her.classList.remove("kissingHer");
     you.classList.remove("kissingYou");
@@ -199,7 +177,6 @@ function createEmoji(symbol) {
   setTimeout(() => emoji.remove(), 2000);
 }
 
-// Quiz check
 function checkQuiz() {
   let ans = document.getElementById("quizAnswer").value.trim();
   if (ans.length > 0) {
