--- a/page14.html
+++ b/page14.html
@@ -69,13 +69,13 @@
             transform: translateX(0);
         }
 
-        /* Kissing animation */
+        /* Kissing animation - CORRECTED VALUES */
         .left-character.kiss {
-            transform: translateX(100px); /* Adjust distance to meet in center */
+            transform: translateX(200px); /* Increased to move further right */
         }
 
         .right-character.kiss {
-            transform: translateX(-100px); /* Adjust distance to meet in center */
+            transform: translateX(-200px); /* Increased to move further left */
         }
 
         #kissButton {
