--- a/page16.html
+++ b/page16.html
@@ -26,6 +26,8 @@
         .main-title {
             font-size: 4em; /* Larger, bolder text */
             color: #FFEB3B; /* Bright yellow */
+            /* Adjusted margin to move text higher */
+            margin-top: 20px; 
             margin-bottom: 5px;
             text-shadow: 0 0 15px #FFD700, 0 0 25px rgba(255, 215, 0, 0.7), 0 0 35px rgba(255, 215, 0, 0.5); 
             z-index: 15; /* Ensure titles are above effects */
@@ -34,7 +36,8 @@
 
         .subtitle {
             font-size: 2.2em; /* Slightly smaller for subtitle */
-            margin-bottom: 30px;
+            /* Adjusted margin to move text higher */
+            margin-bottom: 20px; /* Reduced from 30px */
             color: #FFC0CB; /* Pinkish tone */
             text-shadow: 0 0 8px #FFC0CB, 0 0 15px rgba(255, 192, 203, 0.5);
             z-index: 15;
@@ -43,10 +46,13 @@
         /* Slideshow Container */
         .slideshow-container {
             position: relative;
-            width: 70vw; /* Responsive width */
-            max-width: 500px; /* Max width to prevent overly large images */
-            height: 50vh; /* Responsive height */
-            max-height: 400px; /* Max height */
+            /* INCREASED SIZE FOR IMAGES */
+            width: 85vw; /* Make it wider */
+            max-width: 650px; /* Increase max width */
+            height: 60vh; /* Make it taller */
+            max-height: 500px; /* Increase max height */
+            /* END INCREASED SIZE */
+
             background-color: rgba(255, 255, 255, 0.1); /* Slight background for context */
             border: 5px solid white;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.3);
@@ -77,7 +83,8 @@
             box-shadow: 0 0 30px #FFEB3B, 0 0 50px rgba(255, 215, 0, 0.7);
             color: #333;
             text-align: center;
-            margin-top: 30px;
+            /* Adjusted margin-top for better spacing */
+            margin-top: 20px; /* Reduced from 30px */
             z-index: 20; /* Ensure quiz is on top */
             display: none; /* Hidden by default */
             animation: bounceIn 1s ease-out;
