--- a/page16.html
+++ b/page16.html
@@ -9,12 +9,12 @@
         /* General Setup */
         body {
             margin: 0;
-            overflow: hidden; /* Hide overflow for floating effects */
-            font-family: 'Comic Sans MS', cursive, sans-serif; /* A playful font */
-            background: linear-gradient(to right bottom, #FFD700, #FF69B4, #8A2BE2); /* Vibrant gradient */
+            overflow: hidden; 
+            font-family: 'Comic Sans MS', cursive, sans-serif; 
+            background: linear-gradient(to right bottom, #FFD700, #FF69B4, #8A2BE2); 
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: flex-start; /* Aligns items to the top */
             align-items: center;
             min-height: 100vh;
             color: white;
@@ -24,21 +24,21 @@
 
         /* Titles */
         .main-title {
-            font-size: 4em; /* Larger, bolder text */
-            color: #FFEB3B; /* Bright yellow */
-            /* Adjusted margin to move text higher */
-            margin-top: 20px; 
+            font-size: 4em; 
+            color: #FFEB3B; 
+            /* Text moved further up */
+            margin-top: 30px; /* Increased top margin */
             margin-bottom: 5px;
             text-shadow: 0 0 15px #FFD700, 0 0 25px rgba(255, 215, 0, 0.7), 0 0 35px rgba(255, 215, 0, 0.5); 
-            z-index: 15; /* Ensure titles are above effects */
+            z-index: 15; 
             font-weight: bold;
         }
 
         .subtitle {
-            font-size: 2.2em; /* Slightly smaller for subtitle */
-            /* Adjusted margin to move text higher */
-            margin-bottom: 20px; /* Reduced from 30px */
-            color: #FFC0CB; /* Pinkish tone */
+            font-size: 2.2em; 
+            /* Text moved further up */
+            margin-bottom: 20px; 
+            color: #FFC0CB; 
             text-shadow: 0 0 8px #FFC0CB, 0 0 15px rgba(255, 192, 203, 0.5);
             z-index: 15;
         }
@@ -46,33 +46,33 @@
         /* Slideshow Container */
         .slideshow-container {
             position: relative;
-            /* INCREASED SIZE FOR IMAGES */
-            width: 85vw; /* Make it wider */
-            max-width: 650px; /* Increase max width */
-            height: 60vh; /* Make it taller */
-            max-height: 500px; /* Increase max height */
+            /* SIGNIFICANTLY INCREASED SIZE */
+            width: 90vw; 
+            max-width: 800px; /* Max width for large displays */
+            height: 65vh; 
+            max-height: 600px; /* Max height */
             /* END INCREASED SIZE */
 
-            background-color: rgba(255, 255, 255, 0.1); /* Slight background for context */
+            background-color: rgba(255, 255, 255, 0.1); 
             border: 5px solid white;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5), inset 0 0 10px rgba(255, 255, 255, 0.3);
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden; /* Hide parts of images if they overflow after shaping */
-            margin-bottom: 40px;
+            overflow: hidden; 
+            margin-bottom: 20px; /* Reduced margin to keep quiz higher */
             z-index: 10;
-            transition: border-radius 1s ease-in-out, box-shadow 1s ease-in-out; /* Smooth shape and glow transitions */
+            transition: border-radius 1s ease-in-out, box-shadow 1s ease-in-out; 
         }
 
         .slideshow-image {
             max-width: 100%;
             max-height: 100%;
-            object-fit: contain; /* IMPORTANT: Prevents cropping */
+            object-fit: contain; /* Prevents cropping */
             display: block;
-            opacity: 0; /* Start hidden for fade-in */
-            transition: opacity 1s ease-in-out; /* Smooth fade for images */
-            filter: drop-shadow(0 0 10px #FFD700) drop-shadow(0 0 20px #FF69B4); /* Initial glow */
+            opacity: 0; 
+            transition: opacity 1s ease-in-out; 
+            filter: drop-shadow(0 0 10px #FFD700) drop-shadow(0 0 20px #FF69B4); 
         }
 
         /* Quiz Container */
@@ -83,10 +83,9 @@
             box-shadow: 0 0 30px #FFEB3B, 0 0 50px rgba(255, 215, 0, 0.7);
             color: #333;
             text-align: center;
-            /* Adjusted margin-top for better spacing */
-            margin-top: 20px; /* Reduced from 30px */
-            z-index: 20; /* Ensure quiz is on top */
-            display: none; /* Hidden by default */
+            margin-top: 20px;
+            z-index: 20; 
+            display: none; 
             animation: bounceIn 1s ease-out;
             border: 5px solid #FFD700;
         }
@@ -94,7 +93,7 @@
         .quiz-question {
             font-size: 2.5em;
             font-weight: bold;
-            color: #FF1493; /* Deep pink */
+            color: #FF1493; 
             margin-bottom: 20px;
             text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
         }
@@ -103,7 +102,7 @@
             width: 80%;
             padding: 15px;
             margin: 15px 0;
-            border: 3px solid #FF69B4; /* Hot pink border */
+            border: 3px solid #FF69B4; 
             border-radius: 10px;
             font-size: 1.2em;
             text-align: center;
@@ -111,13 +110,13 @@
             transition: border-color 0.3s ease-in-out;
         }
         #quizAnswer:focus {
-            border-color: #8A2BE2; /* Blue-violet on focus */
+            border-color: #8A2BE2; 
         }
 
         #submitAnswer {
             padding: 15px 30px;
             font-size: 1.4em;
-            background-color: #4CAF50; /* Green */
+            background-color: #4CAF50; 
             color: white;
             border: none;
             border-radius: 10px;
@@ -134,7 +133,7 @@
             transform: translateY(0);
         }
 
-        /* --- Grand Effects Animations (Same as Page 15, ensures consistency) --- */
+        /* --- Grand Effects Animations --- */
         @keyframes bounceIn {
             0% { transform: translate(-50%, -50%) scale(0.3); opacity: 0; }
             50% { transform: translate(-50%, -50%) scale(1.1); opacity: 1; }
@@ -206,52 +205,53 @@
                 'Cheek16.jpg', 'Cheek17.jpg', 'Cheek18.jpg', 'Cheek19.jpg', 'Cheek20.jpg'
             ];
             let currentImageIndex = 0;
-            const slideDuration = 4000; // 4 seconds per slide
+            const slideDuration = 4000; 
             let slideshowInterval;
-            let cycleCount = 0; // To track when all images have shown once
+            let cycleCount = 0; 
 
             const emojis = ['💖', '💕', '🥰', '😍', '✨', '🌟', '🎉', '🎈', '❤️', '😘', '🎯', '👑', '🎂', '🙈', '🤭'];
             const confettiColors = ['#f00', '#0f0', '#00f', '#ff0', '#0ff', '#f0f', '#fff', '#ffd700', '#FF5722', '#4CAF50', '#8A2BE2', '#FF1493'];
 
-            // --- Autoplay background music ---
-            // User interaction is required for autoplay in most browsers
-            document.body.addEventListener('click', () => {
-                if (backgroundSong.paused) {
-                    backgroundSong.play().catch(e => console.log('Autoplay failed:', e));
-                }
-            }, { once: true });
+            // --- Autoplay background music FIX ---
+            // This attempts to play the music as soon as the page loads, but uses 
+            // the universal 'click' event on the document to ensure playback 
+            // if the browser is blocking it (which it likely will).
+            backgroundSong.play().catch(e => {
+                // If autoplay fails, listen for the first tap/click on the document
+                document.body.addEventListener('click', () => {
+                    backgroundSong.play().catch(e => console.log('Music still blocked after click.'));
+                }, { once: true });
+            });
 
 
             // --- Slideshow Logic ---
             function changeSlide() {
-                // Fade out current image (if any)
                 slideshowImage.style.opacity = '0';
 
                 setTimeout(() => {
                     slideshowImage.src = imageFiles[currentImageIndex];
-                    applyDynamicStyles(); // Apply random shape and glow
-                    slideshowImage.style.opacity = '1'; // Fade in new image
+                    applyDynamicStyles(); 
+                    slideshowImage.style.opacity = '1'; 
 
                     currentImageIndex++;
                     if (currentImageIndex >= imageFiles.length) {
-                        currentImageIndex = 0; // Loop back to start
-                        cycleCount++; // Increment cycle count
-                        if (cycleCount === 1) { // After the first full cycle
-                            clearInterval(slideshowInterval); // Stop slideshow
+                        currentImageIndex = 0; 
+                        cycleCount++; 
+                        if (cycleCount === 1) { 
+                            clearInterval(slideshowInterval); 
                             setTimeout(() => {
-                                quizContainer.style.display = 'block'; // Show quiz
-                                startContinuousConfetti(); // Grand confetti shower for quiz reveal
-                            }, slideDuration); // Wait for the last image to fade in
-                            return; // Don't restart slideshow if quiz is up
+                                quizContainer.style.display = 'block'; 
+                                startContinuousConfetti(); 
+                            }, slideDuration); 
+                            return; 
                         }
                     }
 
-                    // Trigger a firework burst with each new image (after quiz is not active)
                     if (quizContainer.style.display === 'none') {
                          createFireworksBurst(Math.random() * window.innerWidth, Math.random() * window.innerHeight);
                     }
                    
-                }, 1000); // Allow 1 second for fade out before changing src and fading in
+                }, 1000); 
             }
 
             function applyDynamicStyles() {
@@ -277,16 +277,17 @@
             // --- Quiz Submission Logic ---
             submitAnswer.addEventListener('click', () => {
                 const answer = document.getElementById('quizAnswer').value.trim();
+                // Submits automatically without warning if any text is present
                 if (answer !== '') {
                     backgroundSong.pause();
-                    window.location.href = 'page17.html'; // Navigate to next page
+                    window.location.href = 'page17.html'; 
                 } else {
                     alert('Come on, give a sweet answer! 🤗');
                 }
             });
 
 
-            // --- Grand Effects Functions (Reused and adapted for Page 16) ---
+            // --- Grand Effects Functions ---
             
             // Continuous Floating Emojis
             setInterval(createFloatingEmoji, 400); 
@@ -310,12 +311,11 @@
                 });
             }
 
-            // Continuous Confetti (for quiz reveal and possibly background)
+            // Continuous Confetti
             let confettiInterval;
             function startContinuousConfetti() {
                 confettiInterval = setInterval(createConfettiPiece, 80);
-                // Optionally stop after some time if it's too much
-                setTimeout(() => clearInterval(confettiInterval), 15000); // Stops after 15 seconds
+                setTimeout(() => clearInterval(confettiInterval), 15000); 
             }
 
             function createConfettiPiece() {
