--- a/page19.html
+++ b/page19.html
@@ -84,7 +84,7 @@
 
         .photo-frame {
             width: 45%; 
-            height: 250px; /* Standardized height */
+            height: 250px; 
             max-width: 250px; 
             border: 8px solid #FFD700; 
             border-radius: 15px; 
@@ -96,7 +96,9 @@
         .photo-frame img {
             width: 100%;
             height: 100%;
-            object-fit: cover; 
+            /* FIX: Use 'contain' to ensure full image visibility, 'cover' crops */
+            object-fit: contain; 
+            object-position: center; /* Center the image within the frame */
             display: block;
         }
 
@@ -214,7 +216,7 @@
             const senderFrame = document.getElementById('senderFrame');
             const receiverFrame = document.getElementById('receiverFrame');
             const kissSound = document.getElementById('kissSound');
-            const kissCountDisplay = document.getElementById('kissCountDisplay');
+            const kissCountDisplay = document('kissCountDisplay');
             const quizContainer = document.getElementById('quizContainer');
             const submitAnswer = document.getElementById('submitAnswer');
             const body = document.body;
@@ -391,7 +393,7 @@
                     }
 
                 }, totalAnimationTime);
-            }
+            });
 
             // --- Event Listeners ---
             kissButton.addEventListener('click', startKissExchange);
