--- a/page3.html
+++ b/page3.html
@@ -101,11 +101,11 @@
 
   <div class="message">
     Un Amma ku... Love you Amma 🌎 <br>
-    Type a lovely message below and hit submit! The next surprise will load in a moment. 💕
+    Type a lovely message below 
   </div>
 
   <div id="delay-message">
-    (Wait for **20 seconds** after page load before submitting to unlock the next page!)
+    (Wait for 
   </div>
 
   <input type="text" id="answer" placeholder="Type your loving message...">
