--- a/page22.html
+++ b/page22.html
@@ -222,7 +222,7 @@
     <div id="music-trigger"></div>
 
     <div class="content-container">
-        <p class="top-bold-text">Azhagu 🙈 Kannam😚+Siripu😁 rendumae orey photo la</p>
+        <p class="top-bold-text">Azhagu 🙈 Kannam😚+Siripu😁 rendumae orey photo la.... Click all emojis</p>
         
         <div class="image-wrapper">
             <img src="Page22.jpg" alt="Special Friend's Photo">
