--- a/page27.html
+++ b/page27.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Birthday Surprise - Page 27 (Perfect Center)</title>
+  <title>Birthday Surprise - Page 27 (Perfect Middle Center)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -30,13 +30,14 @@
       filter: brightness(60%);
     }
 
-    /* 2. Content Layer (Used for perfect centering) */
+    /* 2. Content Layer (FIX: Ensure full screen height with 100vh) */
     .container {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      /* FIX: Use 100vh to ensure the container stretches to the full viewport height */
+      min-height: 100vh; 
       display: flex;
       justify-content: center; /* Centers content horizontally */
       align-items: center;    /* Centers content vertically */
@@ -44,7 +45,7 @@
       background: rgba(0, 0, 0, 0.4);
     }
 
-    /* 3. Quiz Area FIX: Flexbox in the container handles positioning */
+    /* 3. Quiz Area (Now relying purely on the container's flex centering) */
     .quiz-area {
       padding: 30px;
       background: rgba(255, 105, 180, 0.9);
