--- a/page27.html
+++ b/page27.html
@@ -10,7 +10,6 @@
       padding: 0;
       font-family: 'Comic Sans MS', cursive, sans-serif;
       text-align: center;
-      color: white;
       overflow: hidden;
       position: relative;
     }
@@ -30,23 +29,25 @@
       filter: brightness(60%);
     }
 
-    /* 2. Content Layer (FIX: Ensure full screen height with 100vh) */
+    /* 2. Content Layer (Minimalistic, just holds the animations) */
     .container {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      /* FIX: Use 100vh to ensure the container stretches to the full viewport height */
-      min-height: 100vh; 
-      display: flex;
-      justify-content: center; /* Centers content horizontally */
-      align-items: center;    /* Centers content vertically */
+      height: 100%;
       z-index: 10;
       background: rgba(0, 0, 0, 0.4);
     }
 
-    /* 3. Quiz Area (Now relying purely on the container's flex centering) */
+    /* 3. Quiz Area FIX: Positioned fixed to the screen for reliable centering */
     .quiz-area {
+      /* PERFECT CENTER FIX */
+      position: fixed; 
+      top: 50%;           
+      left: 50%;          
+      transform: translate(-50%, -50%); /* Shifts element back to truly center it */
+      
       padding: 30px;
       background: rgba(255, 105, 180, 0.9);
       border-radius: 15px;
@@ -55,7 +56,7 @@
       font-size: 1.5em;
       text-shadow: 1px 1px 3px #000;
       max-width: 90%;
-      z-index: 15;
+      z-index: 15; /* Ensure it is on top of everything */
       
       /* Visibility controls the 15-second delay appearance */
       visibility: hidden; 
